tests/errors/match-enum-payload-literal-nonexhaustive.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  return match Some(1) {
    Some(1) => 10,
    None => 0,
  };
}
